--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
 <script>
     let tg = window.Telegram.WebApp; //получаем объект webapp телеграма    
     tg.expand(); //расширяем на все окно    
-    tg.showAlert('Добро пожаловать!');   
+    //tg.showAlert('Добро пожаловать!');   
 </script>
 </html>
