--- a/end.html
+++ b/end.html
@@ -35,7 +35,8 @@
     <script src="end.js"></script>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
   </body>
-<script>      
+<script>
+    let tg = window.Telegram.WebApp;    
     tg.showAlert('Нажмите на кнопку внизу приложения чтобы сохранить результаты'); 
     tg.MainButton.setText("Закрыть и вернуться"); //изменяем текст кнопки иначе    
     tg.MainButton.show()
