--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <div id="home" class="flex-center flex-column">
-        <h1>Викторина</h1>
+        <h1>Чепухариум</h1>
         <a class="btn" href="game.html">Играть</a>
         <a class="btn" href="highscores.html">Лучшие результаты</a>
       </div>
